external-crates/move/crates/move-compiler/tests/move_2024/parser/match.exp
bug[ICE12003]: INTERNAL COMPILER ERROR
  ┌─ tests/move_2024/parser/match.move:3:19
  │
3 │        Fahrenheit(u16),
  │                   ^^^ ICE base type constraint failed: &(u16: copy+drop+store)

  │
  = The Move compiler has encountered an internal compiler error.
     Please report this this issue to the Mysten Labs Move language team,
     including this error and any relevant code, to the Mysten Labs issue tracker
     at : https://github.com/MystenLabs/sui/issues

bug[ICE12003]: INTERNAL COMPILER ERROR
  ┌─ tests/move_2024/parser/match.move:4:24
  │
4 │        Celsius { temp: u16 },
  │                        ^^^ ICE base type constraint failed: &(u16: copy+drop+store)

  │
  = The Move compiler has encountered an internal compiler error.
     Please report this this issue to the Mysten Labs Move language team,
     including this error and any relevant code, to the Mysten Labs issue tracker
     at : https://github.com/MystenLabs/sui/issues

warning[W09002]: unused variable
   ┌─ tests/move_2024/parser/match.move:17:35
   │
17 │           Temperature::Fahrenheit(temp) if (*temp >= 212) => true,
   │                                   ^^^^ Unused local variable 'temp'. Consider removing or prefixing with an underscore: '_temp'
   │
   = This warning can be suppressed with '#[allow(unused_variable)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

warning[W09002]: unused variable
   ┌─ tests/move_2024/parser/match.move:18:34
   │
18 │           Temperature::Celsius { temp } if (*temp >= 100) => true,
   │                                  ^^^^ Unused local variable 'temp'. Consider removing or prefixing with an underscore: '_temp'
   │
   = This warning can be suppressed with '#[allow(unused_variable)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

bug[ICE12003]: INTERNAL COMPILER ERROR
   ┌─ tests/move_2024/parser/match.move:28:41
   │
28 │     public fun is_some_true_0(o: Option<bool>): bool {
   │                                         ^^^^ ICE base type constraint failed: &(bool: copy+drop+store)

   │
   = The Move compiler has encountered an internal compiler error.
      Please report this this issue to the Mysten Labs Move language team,
      including this error and any relevant code, to the Mysten Labs issue tracker
      at : https://github.com/MystenLabs/sui/issues

bug[ICE12003]: INTERNAL COMPILER ERROR
   ┌─ tests/move_2024/parser/match.move:39:23
   │
39 │          Option::Some(false) => false,
   │                       ^^^^^ ICE base type constraint failed: &(bool: copy+drop+store)

   │
   = The Move compiler has encountered an internal compiler error.
      Please report this this issue to the Mysten Labs Move language team,
      including this error and any relevant code, to the Mysten Labs issue tracker
      at : https://github.com/MystenLabs/sui/issues

bug[ICE12003]: INTERNAL COMPILER ERROR
   ┌─ tests/move_2024/parser/match.move:44:41
   │
44 │     public fun is_some_true_2(o: Option<bool>): bool {
   │                                         ^^^^ ICE base type constraint failed: &(bool: copy+drop+store)

   │
   = The Move compiler has encountered an internal compiler error.
      Please report this this issue to the Mysten Labs Move language team,
      including this error and any relevant code, to the Mysten Labs issue tracker
      at : https://github.com/MystenLabs/sui/issues

error[E05001]: ability constraint not satisfied
   ┌─ tests/move_2024/parser/match.move:53:14
   │
23 │     public enum Option<T> {
   │                 ------ To satisfy the constraint, the 'drop' ability would need to be added here
   ·
51 │     public fun option_default<T: drop>(o: Option<T>, default: T): Option<T> {
   │                                           --------- The type '0x42::m::Option<T>' does not have the ability 'drop'
52 │        match (o) {
53 │          x @ _ => x,
   │              ^ Cannot ignore values without the 'drop' ability. '_' patterns discard their values

bug[ICE12003]: INTERNAL COMPILER ERROR
   ┌─ tests/move_2024/parser/match.move:62:12
   │
62 │        Num(u64),
   │            ^^^ ICE base type constraint failed: &(u64: copy+drop+store)

   │
   = The Move compiler has encountered an internal compiler error.
      Please report this this issue to the Mysten Labs Move language team,
      including this error and any relevant code, to the Mysten Labs issue tracker
      at : https://github.com/MystenLabs/sui/issues

warning[W09002]: unused variable
    ┌─ tests/move_2024/parser/match.move:123:17
    │
123 │         let mut n = 0;
    │                 ^ Unused local variable 'n'. Consider removing or prefixing with an underscore: '_n'
    │
    = This warning can be suppressed with '#[allow(unused_variable)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

